--- a/DictionaryEditorNew/Areas/Redactor/Views/Edit/Index.cshtml
+++ b/DictionaryEditorNew/Areas/Redactor/Views/Edit/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@model List<OssetianWord>
 
 <div class="research-mod">
+    @await Component.InvokeAsync("Navbar", "Redactor")
     <h2>Режим просмотра</h2>
-    @await Component.InvokeAsync("Navbar", "User")
    
     <div class="research-mod__words-list">
         @foreach (var word in Model)
         {
             <div class="research-mod__words-list__one-word">
             <div class="btn-outline-secondary research-mod__words-list-osset ">
-                    <a asp-controller="ResearchMod" asp-action="OneWord" asp-route-id="@word.Id">@word.Word</a>
+                    <a asp-controller="Edit" asp-action="OneWord" asp-route-id="@word.Id">@word.Word</a>
             </div>
             <div class="btn-outline-secondary research-mod__words-list-russ">
                 <a>@word.RussianWords.FirstOrDefault(new RussianWord{Id=Guid.NewGuid(), Word="-"}).Word</a>
