--- a/DictionaryEditorNew/Views/Edit/Index.cshtml
+++ b/DictionaryEditorNew/Views/Edit/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@model List<OssetianWord>
 
 <div class="research-mod">
-    <h2>Режим просмотра</h2>
-    <div class="btn btn-secondary back-to-home-button">
-        <a asp-controller="Dictionary" asp-action="Index">Назад в меню словаря</a>
-    </div>
+    <h2>Режим редактирования</h2>
+    @await Component.InvokeAsync("Navbar", "Redactor")
     <div class="research-mod__words-list">
         @foreach (var word in Model)
         {
