--- a/DictionaryEditorNew/wwwroot/css/site.css
+++ b/DictionaryEditorNew/wwwroot/css/site.css
@@ -49,6 +49,11 @@ body {
     margin-top: 30%;
 }
 
+    .about-devs-button > a {
+        color: white;
+        text-decoration: none;
+    }
+
 
 
 
@@ -64,6 +69,9 @@ body {
     align-items: center;
 }
 
+.breadcrumb {
+    width: 100%;
+}
 .dictionary-home__menu {
     display: flex;
     justify-content: center;
@@ -157,11 +165,19 @@ body {
     
     color: white;
 }
-.research-mod__words-list-russ {
-    display: flex;
-    align-items: flex-start;
-    width: 40%
-}
+
+    .research-mod__words-list-osset > a {
+        color: gray;
+    }
+    .research-mod__words-list-osset:hover > a {
+        color: white;
+    }
+
+    .research-mod__words-list-russ {
+        display: flex;
+        align-items: flex-start;
+        width: 40%
+    }
 
 
 
