--- a/DictionaryEditorNew/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DictionaryEditorNew
 @using DictionaryEditorDbNew.Models
+@using DictionaryEditorNew.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
