--- a/DictionaryEditorNew/Areas/Redactor/Views/ResearchMod/Index.cshtml
+++ b/DictionaryEditorNew/Areas/Redactor/Views/ResearchMod/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<OssetianWord>
+﻿@model List<ForeignWord>
 
 <div class="research-mod">
-    @await Component.InvokeAsync("Navbar", "Redactor")
+   @*  @await Component.InvokeAsync("Navbar", "Redactor") *@
     <h2>Режим просмотра</h2>
    
    
