--- a/DictionaryEditorNew/Areas/RegisteredUser/Views/Dictionary/Admin.cshtml
+++ b/DictionaryEditorNew/Areas/RegisteredUser/Views/Dictionary/Admin.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <div class="dictionary-home">
     <h2>Редактор осетинско-русского словаря</h2>
-    @await Component.InvokeAsync("Navbar", "Admin")
+  @*   @await Component.InvokeAsync("Navbar", "Admin") *@
     
 
     
