--- a/DictionaryEditorNew/Areas/RegisteredUser/Views/ResearchMod/Index.cshtml
+++ b/DictionaryEditorNew/Areas/RegisteredUser/Views/ResearchMod/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model List<OssetianWord>
+﻿@model List<ForeignWord>
 
 <div class="research-mod">
     <h2>Режим просмотра</h2>
-    @await Component.InvokeAsync("Navbar", "User")
+   @*  @await Component.InvokeAsync("Navbar", "User") *@
    
     <div class="research-mod__words-list">
         @foreach (var word in Model)
