--- a/DictionaryEditorNew/Areas/Admin/Views/Dictionary/Index.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/Dictionary/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="dictionary-home">
-    @await Component.InvokeAsync("Navbar", "Admin")
+    @* @await Component.InvokeAsync("Navbar", "Admin") *@
     <h2>Редактор осетинско-русского словаря</h2>
    
 
