--- a/DictionaryEditorNew/Areas/Admin/Views/Edit/Index.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/Edit/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<OssetianWord>
+﻿@model List<ForeignWord>
 
 <div class="research-mod">
-    @await Component.InvokeAsync("Navbar", "Admin")
+   @*  @await Component.InvokeAsync("Navbar", "Admin") *@
     <h2>Режим редактирования</h2>
    
     <div class="research-mod__words-list">
