--- a/DictionaryEditorNew/Areas/Admin/Views/Edit/OneWord.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/Edit/OneWord.cshtml
@@ -1,4 +1,4 @@
-﻿@model OssetianWord
+﻿@model ForeignWord
 
 <div class="research-mod__one-word">
     <h2>Режим редактирования</h2>
@@ -7,14 +7,7 @@
             <div class="one-word__info-main-info">
                 <input type="text" name="word" value="@Model.Word" class="form-control" />
 
-                @if (Model.Case != null)
-                {
-                    <input type="text" name="Case" value="@Model.Case" class="form-control" />
-                }
-                else
-                {
-                    <input type="text" name="Case" value="-падеж" class="form-control" />
-                }
+               
 
                 <select name="tense" class="form-control">
                     <option value="thePast">прош.вр</option>
@@ -80,28 +73,7 @@
                             <label>Хуызæнон (Совм)</label>
                         </div>
                         <div class="one-word__info-secondary-info__cases-words">
-                            @if (Model.Cases != null && Model.Cases.Count > 0)
-                            {
-                                <input type="text" name="Cases[0].Nominative" value="@Check(Model.Cases[0].Nominative)" class="form-control" />
-                                <input type="text" name="Cases[0].Genitive" value="@Check(Model.Cases[0].Genitive)" class="form-control" />
-                                <input type="text" name="Cases[0].Dative" value="@Check(Model.Cases[0].Dative)" class="form-control" />
-                                <input type="text" name="Cases[0].Directional" value="@Check(Model.Cases[0].Directional)" class="form-control" />
-                                <input type="text" name="Cases[0].Postponement" value="@Check(Model.Cases[0].Postponement)" class="form-control" />
-                                <input type="text" name="Cases[0].External" value="@Check(Model.Cases[0].External)" class="form-control" />
-                                <input type="text" name="Cases[0].Internal" value="@Check(Model.Cases[0].Internal)" class="form-control" />
-                                <input type="text" name="Cases[0].Joint" value="@Check(Model.Cases[0].Joint)" class="form-control" />
-                            }
-                            else
-                            {
-                                <input type="text" name="Cases[0].Nominative" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Genitive" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Dative" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Directional" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Postponement" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].External" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Internal" value="-" class="form-control" />
-                                <input type="text" name="Cases[0].Joint" value="-" class="form-control" />
-                            }
+                          
                         </div>
                     </div>
                 </div>
