--- a/DictionaryEditorNew/Areas/Redactor/Views/ResearchMod/OneWord.cshtml
+++ b/DictionaryEditorNew/Areas/Redactor/Views/ResearchMod/OneWord.cshtml
@@ -1,4 +1,4 @@
-﻿ @model OssetianWord
+﻿ @model ForeignWord
 
 
 <div class="research-mod__one-word">
@@ -7,14 +7,7 @@
         <div class="one-word__info-main-info">
             <a class="one-word__info-main-info-word">@Model.Word</a>
 
-            @if (Model.Case != null)
-            {
-                <a>@Model.Case</a>
-            }
-            else
-            {
-                <a>-</a>
-            }
+            
             @switch (Model.Gender)
             {
                 case Gender.neuter:
@@ -80,40 +73,6 @@
                 </div>
                 <div class="one-word__info-secondary-info__cases">
 
-
-
-                    <div class="one-word__info-secondary-info__cases-labels">
-                        <a>Падеж</a>
-                        <a>Номон (Им)</a>
-                        <a>Гуырынон (Род)</a>
-                        <a>Дæттынон (Дат)</a>
-                        <a>Арæзтон (Направ)</a>
-                        <a>Иртæстон (Отлож)</a>
-                        <a>Ӕддагбынатон (Внеш. мест)</a>
-                        <a>Цæдисон (Внут. мест)</a>
-                        <a>Хуызæнон (Совм)</a>
-                    </div>
-                    <div class="one-word__info-secondary-info__cases-words">
-                        @foreach (var cases in Model.Cases)
-                        {
-                            <a>Слово</a>
-                            <a>@Chek(Model.Cases[0].Nominative)</a>
-                            <a>@Chek(Model.Cases[0].Genitive)</a>
-                            <a>@Chek(Model.Cases[0].Dative)</a>
-                            <a>@Chek(Model.Cases[0].Directional)</a>
-                            <a>@Chek(Model.Cases[0].Postponement)</a>
-                            <a>@Chek(Model.Cases[0].External)</a>
-                            <a>@Chek(Model.Cases[0].Internal)</a>
-                            <a>@Chek(Model.Cases[0].Joint)</a>
-                        }
-                    </div>
-                    @{
-                        string Chek(string str)
-                        {
-                            if (str == null) return "-";
-                            return str;
-                        }
-                    }
                 </div>
             </div>
         </div>
