--- a/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
+++ b/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="logo">
-        <img src="open-book.png">
+        <img src="/images/open-book.png">
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,9 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Словари <span class="sr-only">(current)</span></a>
+                <a asp-area="" asp-controller="Dictionary" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
             </li>
-
+          
             <li class="nav-item">
                 <a asp-area="Admin" asp-controller="Edit" asp-action="Index" class="nav-link">Редактор</a>
             </li>
@@ -19,9 +19,7 @@
                 <a asp-area="Admin" asp-controller="ResearchMod" asp-action="Index" class="nav-link">Просмотр</a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link">Пользователи</a>
-            </li>
+            
 
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -30,10 +28,7 @@
                    class="nav-link">О нас</a>
             </li>
             <li class="nav-item">
-                <a asp-area=""
-                   asp-controller="Account"
-                   asp-action="Login"
-                   class="nav-link">Войти в аккаунт</a>
+                @await Component.InvokeAsync("Account")            
             </li>
         </ul>
     </div>
