+нав бар, но надо еще отредактировать переход на режим редактирования и просмотра когда словарей много, а не один)

--- a/DictionaryEditorNew/Views/Shared/_Layout.cshtml
+++ b/DictionaryEditorNew/Views/Shared/_Layout.cshtml
@@ -10,10 +10,7 @@
 </head>
 <body>
     <header>
-      
-            @await Component.InvokeAsync("Navbar", "UnLoginUser")
-     
-       
+        @await Component.InvokeAsync("Navbar", ViewBag.NavbarType)           
     </header>
     <div class="container">
         <main role="main" class="pb-3">
