--- a/DictionaryEditorNew/Views/Shared/Components/Navbar/Admin.cshtml
+++ b/DictionaryEditorNew/Views/Shared/Components/Navbar/Admin.cshtml
@@ -1,15 +1,6 @@
-﻿@* <nav aria-label="breadcrumb" class="breadcrumb">
-    <ol class="breadcrumb">
-        <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="breadcrumb-item active">Главная</a>
-        <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="breadcrumb-item active" aria-current="page">Меню словаря</a>
-        <a asp-area="Admin" asp-controller="Edit" asp-action="Index" class="breadcrumb-item active">Режим редактирования</a>
-        <a asp-area="Admin" asp-controller="ResearchMod" asp-action="Index" class="breadcrumb-item active">Режим просмотра</a>
-    </ol>
-</nav> *@
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="logo">
-        <img src="open-book.png" alt="Логотип Ossetian Lexicon">
+        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/open-book.png"></a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -17,32 +8,42 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Словари <span class="sr-only">(current)</span></a>
+                <a asp-area="" asp-controller="Dictionary" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
             </li>
+
             <li class="nav-item">
-                <a asp-area="Admin" asp-controller="Edit" asp-action="Index" class="nav-link">Редактор</a>
+                <a asp-area="Redactor" asp-controller="Edit" asp-action="Index" class="nav-link">Редактор</a>
             </li>
+
+
+
             <li class="nav-item">
-                <a asp-area="Admin" asp-controller="ResearchMod" asp-action="Index" class="nav-link">Просмотр</a>
+                <a asp-area="" asp-controller="ResearchMod" asp-action="Index" class="nav-link">Просмотр</a>
             </li>
-            <li class="nav-item">
-                <a asp-area="Admin" asp-controller="Index" asp-action="Index" class="nav-link">Пользователи</a>
-            </li>
+
+
+
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a asp-controller="Home" asp-action="Devs" class="nav-link">О нас</a>
+                <a asp-area="Admin" asp-controller="User" asp-action="Index"
+                   class="nav-link">Пользователи</a>
             </li>
             <li class="nav-item">
-                <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Войти в аккаунт</a>
+                <a asp-area="" asp-controller="Home" asp-action="Devs"
+                   class="nav-link">О нас</a>
+            </li>
+            <li class="nav-item">
+                @await Component.InvokeAsync("Account")
             </li>
         </ul>
     </div>
 </nav>
 
+
+
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-</body>
-
