--- a/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
+++ b/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="logo">
-        <img src="/images/open-book.png">
+        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/open-book.png"></a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,25 +10,23 @@
             <li class="nav-item active">
                 <a asp-area="" asp-controller="Dictionary" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
             </li>
-          
-            <li class="nav-item">
-                <a asp-area="Admin" asp-controller="Edit" asp-action="Index" class="nav-link">Редактор</a>
-            </li>
+
+           
 
             <li class="nav-item">
-                <a asp-area="Admin" asp-controller="ResearchMod" asp-action="Index" class="nav-link">Просмотр</a>
+                <a asp-area="" asp-controller="ResearchMod" asp-action="Index" class="nav-link">Просмотр</a>
             </li>
 
-            
+
 
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a asp-controller="Home" asp-action="Devs"
+                <a asp-area="" asp-controller="Home" asp-action="Devs"
                    class="nav-link">О нас</a>
             </li>
             <li class="nav-item">
-                @await Component.InvokeAsync("Account")            
+                @await Component.InvokeAsync("Account")
             </li>
         </ul>
     </div>
