--- a/DictionaryEditorNew/Areas/Admin/Views/User/Edit.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/User/Edit.cshtml
@@ -14,12 +14,12 @@
             Действия
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="ChangePassword" asp-route-login="@Model.Login">
+            @* <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="ChangePassword" asp-route-login="@Model.Login">
                 Смена пароля
             </a>
             <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="EditData" asp-route-login="@Model.Login">
                 Редактирование данных
-            </a>
+            </a> *@
             <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="ChangeRole" asp-route-login="@Model.Login">
                 Смена роли
             </a>
