--- a/DictionaryEditorNew/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DictionaryEditorNew/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DictionaryEditorNew
 @using DictionaryEditorDbNew.Models
 @using DictionaryEditorNew.Models
+@using DictionaryEditorNew.Areas.Admin.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
