--- a/DictionaryEditorNew/Areas/RegisteredUser/Views/Home/Devs.cshtml
+++ b/DictionaryEditorNew/Areas/RegisteredUser/Views/Home/Devs.cshtml
@@ -1,5 +1,10 @@
-﻿
-@*     <style>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About the Developers</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -25,66 +30,30 @@
             margin-bottom: 20px;
         }
 
-        .developer img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            margin-right: 20px;
-        }
+            .developer img {
+                border-radius: 50%;
+                width: 150px;
+                height: 150px;
+                margin-right: 20px;
+            }
 
         .developer-info {
             max-width: 600px;
         }
 
-        .developer-info h2 {
-            margin: 0;
-            font-size: 1.5em;
-            color: #333;
-        }
-
-        .developer-info p {
-            margin: 5px 0;
-            font-size: 1em;
-            color: #666;
-        }
-
-        @media (max-width: 768px) {
-            .developer {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .developer img {
-                margin-bottom: 10px;
-            }
-
-            .developer-info {
-                max-width: 100%;
-                text-align: center;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                width: 90%;
-                padding: 10px;
-            }
-
-            .developer img {
-                width: 120px;
-                height: 120px;
-            }
-
             .developer-info h2 {
-                font-size: 1.2em;
+                margin: 0;
+                font-size: 1.5em;
+                color: #333;
             }
 
             .developer-info p {
-                font-size: 0.9em;
+                margin: 5px 0;
+                font-size: 1em;
+                color: #666;
             }
-        }
-    </style> *@
-
+    </style>
+</head>
 <body>
     <div class="container">
         <h1>Разработчики</h1>
@@ -108,4 +77,4 @@
         </div>
     </div>
 </body>
-
+</html>
