--- a/DictionaryEditorNew/Views/Shared/Components/Navbar/Redactor.cshtml
+++ b/DictionaryEditorNew/Views/Shared/Components/Navbar/Redactor.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="logo">
-        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/open-book.png"></a>
+        <a asp-area="Redactor" asp-controller="Home" asp-action="Index"><img src="/images/open-book.png"></a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a asp-area="" asp-controller="Dictionary" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
+                <a asp-area="Redactor" asp-controller="Home" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
             </li>
 
             <li class="nav-item">
