--- a/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
+++ b/DictionaryEditorNew/Views/Shared/Components/Navbar/UnLoginUser.cshtml
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a asp-area="" asp-controller="Dictionary" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Словари <span class="sr-only"></span></a>
             </li>
 
            
