--- a/DictionaryEditorNew/Areas/RegisteredUser/Views/Home/Index.cshtml
+++ b/DictionaryEditorNew/Areas/RegisteredUser/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h5>Выберите словарь</h5>
     <div class="dicts-list">
         <div class="btn btn-warning one-dict">
-            <a asp-area="Redactor" asp-controller="Dictionary" asp-action="Index">Осетинско-русский словарь</a>
+            <a asp-area="RegisteredUser" asp-controller="Dictionary" asp-action="Index">Осетинско-русский словарь</a>
         </div>
     </div>
 
