--- a/DictionaryEditorNew/wwwroot/css/site.css
+++ b/DictionaryEditorNew/wwwroot/css/site.css
@@ -367,8 +367,7 @@ body {
     text-decoration: none;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: none;
-    background-color: #007bff;
+    border: none;   
     color: #fff;
     cursor: pointer;
 }
@@ -394,3 +393,80 @@ body {
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.developer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+    .developer img {
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        margin-right: 20px;
+    }
+
+.developer-info {
+    max-width: 600px;
+}
+
+    .developer-info h2 {
+        margin: 0;
+        font-size: 1.5em;
+        color: #333;
+    }
+
+    .developer-info p {
+        margin: 5px 0;
+        font-size: 1em;
+        color: #666;
+    }
+
+@media (max-width: 768px) {
+    .developer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+        .developer img {
+            margin-bottom: 10px;
+        }
+
+    .developer-info {
+        max-width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .developer img {
+        width: 120px;
+        height: 120px;
+    }
+
+    .developer-info h2 {
+        font-size: 1.2em;
+    }
+
+    .developer-info p {
+        font-size: 0.9em;
+    }
+}
